feat: add photo gallery

--- a/index.html
+++ b/index.html
@@ -3,7 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link rel="stylesheet" href="styles.css" />
+    <title>Avengers App</title>
   </head>
-  <body></body>
+  <body>
+    <div class="gallery">
+      <img src="./images/avengers_01.jpg" alt="Thor" />
+      <img src="./images/avengers_02.jpg" alt="Iron Man" />
+      <img src="./images/avengers_03.jpg" alt="Hulk" />
+      <img src="./images/avengers_04.jpg" alt="Hawkeye" />
+      <img src="./images/avengers_05.jpg" alt="Captain America" />
+      <img src="./images/avengers_06.jpg" alt="Black Widow" />
+    </div>
+  </body>
 </html>
