fix: turned Thor's image into link to redirect to Thor's page

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
   </head>
   <body>
     <div class="gallery">
-      <img src="./images/avengers_01.jpg" alt="Thor" />
+      <a href="./Thor.html">
+        <img src="./images/avengers_01.jpg" alt="Thor" />
+      </a>
       <img src="./images/avengers_02.jpg" alt="Iron Man" />
       <img src="./images/avengers_03.jpg" alt="Hulk" />
       <img src="./images/avengers_04.jpg" alt="Hawkeye" />
