--- a/index.html
+++ b/index.html
@@ -11,11 +11,21 @@
       <a href="./Thor.html">
         <img src="./images/avengers_01.jpg" alt="Thor" />
       </a>
-      <img src="./images/avengers_02.jpg" alt="Iron Man" />
-      <img src="./images/avengers_03.jpg" alt="Hulk" />
-      <img src="./images/avengers_04.jpg" alt="Hawkeye" />
-      <img src="./images/avengers_05.jpg" alt="Captain America" />
-      <img src="./images/avengers_06.jpg" alt="Black Widow" />
+      <a href="./Iron_Man.html">
+        <img src="./images/avengers_02.jpg" alt="Iron Man" />
+      </a>
+      <a href="./Hulk.html">
+        <img src="./images/avengers_03.jpg" alt="Hulk" />
+      </a>
+      <a href="./Hawkeye.html">
+        <img src="./images/avengers_04.jpg" alt="Hawkeye" />
+      </a>
+      <a href="./Captain_America.html">
+        <img src="./images/avengers_05.jpg" alt="Captain America" />
+      </a>
+      <a href="./Black_Widow.html">
+        <img src="./images/avengers_06.jpg" alt="Black Widow" />
+      </a>
     </div>
   </body>
 </html>
