--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <title>Avengers App</title>
   </head>
   <body>
+    <div id="menu">
+      <a href="#">Home</a>
+      <a href="#">About</a>
+      <a href="#">Contact</a>
+    </div>
     <div class="gallery">
       <a href="./Thor.html">
         <img src="./images/avengers_01.jpg" alt="Thor" />
